<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">U箱超市</string>
    <string name="app_phone">400-800-4869</string>
    <string name="app_phone_conection">联系客服 (400-800-4869)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_tag">flag</string>
    <string name="app_tag_key">flag_key</string>
    <string name="app_btn_label_ok">确定</string>
    <string name="app_btn_label_canel">取消</string>
    <string name="app_back_label">返回</string>
    <string name="app_label_notify">提醒</string>
    <string name="app_label_opt">操作</string>
    <string name="app_msg_leave">当前数据没有保存，确定要离开？</string>
    <string name="app_label_conect_network_fail">连接网络失败。</string>
    <string name="app_label_exit">再按一次退出应用程序</string>
    <string name="app_label_back">后退</string>
    <string name="app_read_data">数据读取中，请稍候...</string>
    <string name="app_up_data">数据处理中，请稍候...</string>
    <string name="app_registering">正在提交注册，请稍候...</string>
    <string name="app_logining">正在登录，请稍候...</string>
    <string name="app_order_up_data">正在提交订单...</string>
    <string name="update_client_sd_no_space_msg">对不起，无法下载到你的SD卡，请确保SD卡有用的空间。</string>
    <string name="app_edit_text_hint">点击输入</string>
    <string name="index_title">热销排行</string>
    <string name="cat_list_title">分类浏览</string>
    <string name="like_title">我的喜好</string>
    <string name="shopping_list_title">购物车</string>
    <string name="more_title">我的U箱</string>
    <string name="more_feedback_word_tv_label">您还可以输入%s个字</string>
    <string name="more_feed_back_submit_btn_label">提交</string>
    <string name="more_feed_back_content_empty">反馈内容不能为空</string>
    <string name="more_feed_back_content_range">反馈内容不能超过%s个字</string>
    <string name="tab_topic">首页</string>
    <string name="tab_category">分类浏览</string>
    <string name="tab_my_favorite">我的喜好</string>
    <string name="tab_shopping_cart">购物车</string>
    <string name="tab_setting">个人设置</string>
    <string name="tab_shopping_cart_btn_edit">编辑</string>
    <string name="tab_shopping_cart_btn_success">完成</string>
    <string name="address_detail_provice">省份</string>
    <string name="address_detail_city">市区</string>
    <string name="address_detail_area" />
    <string name="my_recently_viewed">最近浏览</string>
    <string name="my_wish_list">我的收藏</string>
    <string name="my_order_history">我常买的</string>
    <string name="my_coupon_list">我的代金券</string>
    <string name="my_recently_viewed_empty">您还没有浏览的商品</string>
    <string name="my_wish_list_empty">您还没有收藏商品呢</string>
    <string name="my_order_history_empty">您还没有买过商品呢</string>
    <string name="using">未使用</string>
    <string name="used">已使用</string>
    <string name="guoqi">已过期</string>
    <string name="lock">待解锁</string>
    <string name="processing">处理中</string>
    <string name="cancelled">已取消</string>
    <string name="done">已完成</string>
    <string name="order_id">订单编号:</string>
    <string name="for_settlement">待结算</string>
    <string name="order_detail">%1$s 下单 %2$d个包裹 共%3$d件</string>
    <string name="city_choose_hint">因各省份所售商品不同，请根据您的收货地址选择相应的省份</string>
    <string name="order_detail_title">订单详情</string>
    <string name="order_count">共%1$d件商品</string>
    <string name="number_label">数量：</string>
    <string name="unit_price_label">单价：</string>
    <string name="total_number_label">总数量：</string>
    <string name="goods_total_price_label">商品总金额：</string>
    <string name="goods_freightage_label">运费(%1$s)：</string>
    <string name="consignee">收货人信息</string>
    <string name="payment_method">支付方式</string>
    <string name="cancel_order">取消订单</string>
    <string name="promotion">促销活动</string>
    <string name="order_check_payway_not_selected">请选择支付方式</string>
    <string name="order_check_payway_selected">选择支付方式</string>
    <string name="order_check_cash_coupon">使用代金券</string>
    <string name="has_not_address_info">您还没有收获地址，快创建一个吧！</string>
    <string name="cancel_address">删除地址</string>
    <string name="send_sms_content">我正在使用U箱超市，买日常所需挺方便的，推荐你也用一下。下载地址：http://m.uxiang.com/dl.htm?refer=appa</string>
    <string name="search_hnit">输入搜索关键字</string>
    <string name="new_search_hnit">输入品牌、商品名称</string>
    <string name="Ensure">确定</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="Cancel">取消</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="post_area_title">配送范围及运费查询</string>
    <string name="post_area_curr">当前所在城市：</string>
    <string name="hot">热销商品</string>
    <string name="sale">促销商品</string>
    <string name="new_product">新品上架</string>
    <string name="post_tebie_desp1">如果你填写的是单位地址，周六，周日和法定节假日的送货时间将会相应顺延</string>
    <string name="post_tebie_desp2">配送时效指配送到县级城市，乡镇配送时效顺延迟1-2天（配送时效的计算从订单出库时算起），不足1公斤按1公斤算</string>
    <string name="post_tebie_desp3">目前“特色服务”可能存在部分地区暂不支持，以您提交订单的配送信息为准</string>
    <string name="order_created_text">请在8小时内完成支付，过时订单将会被自动取消</string>
    <string name="weibosdk_demo_toast_share_success">分享成功</string>
    <string name="weibosdk_demo_toast_share_failed">分享失败</string>
    <string name="weibosdk_demo_toast_share_canceled">取消分享</string>
    <string name="weibosdk_demo_toast_share_response_args_success">收到微博发起的请求成功</string>
    <string name="weibosdk_demo_toast_share_response_args_failed">收到客户端请求消息失败</string>
    <string name="weibosdk_demo_not_support_api_hint">微博客户端不支持 SDK 分享或微博客户端未安装或微博客户端是非官方版本。</string>
    <string name="confirm_title">提示</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="content_description_icon">icon</string>
    <string name="refresh">刷新</string>
    <string name="processing_alipay">加载中</string>
    <string name="download">下载</string>
    <string name="download_fail">下载安装包失败</string>
    <string name="cancel_install_msp">你已取消安装移动快捷支付服务</string>
    <string name="cancel_install_alipay">你已取消安装支付宝钱包</string>
    <string name="redo">重试</string>
    <string name="install_msp">你尚未安装支付宝移动快捷支付服务，请立即安装</string>
    <string name="install_alipay">你尚未安装支付宝钱包，请立即安装</string>
</resources>
