<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" />

    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.0"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/console_line_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/main_navigation_background"
        android:orientation="horizontal" >

        <RadioGroup
            android:id="@+id/main_tab_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/main_navigation_background"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:paddingTop="2.0dip" >

            <RadioButton
                android:id="@+id/main_tab_home"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/main_navigation_home"
                android:text="@string/tab_topic" />

            <RadioButton
                android:id="@+id/main_tab_catagory"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/main_navigation_catagory"
                android:text="@string/tab_category" />

            <RadioButton
                android:id="@+id/main_tab_my_favorite"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/main_navigation_personal"
                android:text="@string/tab_my_favorite" />

            <RadioButton
                android:id="@+id/main_tab_car"
                style="@style/main_tab_bottom"
                android:layout_height="fill_parent"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/main_navigation_car"
                android:text="@string/tab_shopping_cart" />

            <RadioButton
                android:id="@+id/main_tab_more"
                style="@style/main_tab_bottom"
                android:drawableTop="@drawable/main_navigation_more"
                android:text="@string/tab_setting" />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>